Improve the JSol'Ex UI
- Generate an output directory alongside the processed image
- Display generated images
- Add notifications