@@ -6,8 +6,21 @@ plugins {
     id("org.beryx.jlink")
 }
 
+// We can safely enable preview features because it's
+// an application, so no consumers except for the final
+// deliverable
+
 tasks.withType<JavaExec>().configureEach {
     outputs.upToDateWhen { false }
+    jvmArgs("--enable-preview")
+}
+
+tasks.withType<JavaCompile>().configureEach {
+    options.compilerArgs.add("--enable-preview")
+}
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-preview")
 }
 
 javafx {
